# Battery-SOH-Estimation-Using-PINN-Transformer

./: .gitignore  README.md  gen.py  main.py  pyproject.toml
common/: dataset.py  model.py  train.py
week3/: gen.py  main.py
week4/: gen_spm.py  main.py  spm_ocv.py
